--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "^24.0.11",
     "@types/node": "~8.9.4",
+    "chance": "^1.0.18",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
